# magicblock-source

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: test.yml
event-proto/: Cargo.toml  build.rs
event-proto/src/: lib.rs
geyser-plugin/: Cargo.toml  Makefile  README.md  build.rs  plugin-config.toml
geyser-plugin/configs/: plugin-config.example.json  plugin-config.example.toml
geyser-plugin/src/: account_update_publisher.rs  config.rs  confirmation_buffer.rs  ksql.rs  lib.rs  metrics.rs  preflight.rs  publisher.rs  wire.rs
geyser-plugin/src/initial_account_backfill/: mod.rs  rpc.rs
geyser-plugin/src/plugin/: dispatch.rs  mod.rs
geyser-plugin/src/server/: accounts.rs  mod.rs  prom.rs  subscriptions.rs
grpc-service/: Cargo.toml  Makefile  README.md
grpc-service/configs/: config.toml
grpc-service/examples/: grpc_client.rs
grpc-service/src/: app.rs  config.rs  domain.rs  errors.rs  kafka.rs  ksql.rs  main.rs  output.rs  preflight.rs  traits.rs
grpc-service/src/grpc_service/: convert.rs  dispatcher.rs  init_subs.rs  mod.rs  readiness.rs  runtime.rs  service.rs  sink.rs  utils.rs
ix-tests/: Cargo.toml
ix-tests/configs/: suite.toml
ix-tests/configs/grpc-service/: service-1.toml  service-2.toml
ix-tests/src/: accounts.rs  artifacts.rs  cli.rs  client.rs  config.rs  context.rs  expectation.rs  layout.rs  main.rs  observation.rs  runner.rs  scenario.rs  service.rs  validator.rs
ix-tests/src/scenarios/: dual_concurrent.rs  dual_restart.rs  mod.rs  single_basic.rs  single_load.rs  single_triage.rs
kafka-setup/: Makefile  README.md  docker-compose.yml  redpanda-console-config.yaml
kafka-setup/sh/: reset-state.sh
kafka-setup/sh/decoders/: pubkey.py
kafka-setup/sh/kafka/: 01_recreate-account-updates-topic.sh
kafka-setup/sh/ksql/: 01_setup-streams.sh  02_create-accounts-table.sh  03_reset-accounts-state.sh
kafka-setup/sh/redpanda/: 01_register-proto-schema.sh
