[package]
name = "ix-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bs58 = "0.5"
futures = "0.3"
helius-laserstream = { git = "https://github.com/magicblock-labs/laserstream-sdk", rev = "fe205cb2b85864d1821027d663813d66160285dc" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-keypair = "3.1.2"
solana-pubkey = "4.1.0"
solana-rpc-client = { version = "4.0.0-beta.4", default-features = false }
solana-signature = "3.4.0"
solana-signer = "3.0.0"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
solana-transaction = { version = "3.1.0", features = ["bincode"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "process", "sync", "time", "fs", "signal"] }
tokio-stream = "0.1"
toml = "0.9.12"
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
